--- a/less/activityform.less
+++ b/less/activityform.less
@@ -333,8 +333,11 @@
 
 		.student-list, .actions {
 			input, select, textarea, a, .c-checkbox {
-				display: none;
+				display: none !important;
 			}
+		}
+		.prepare-message {
+			display: none !important;
 		}
 		.alert {
 			display: none !important;
